-
Bug
-
Resolution: Fixed
-
Blocker
-
None
-
Lustre 2.8.0
-
lustre-master build #3029
-
3
-
9223372036854775807
This issue was created by maloo for sarah_lw <wei3.liu@intel.com>
This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/bcb260f2-fe71-11e4-a865-5254006e85c2.
The sub-test test_bonnie failed with the following error:
test failed to respond and timed out
this may be a dup of LU-4875
04:45:24:Lustre: DEBUG MARKER: == sanity-benchmark test bonnie: bonnie++ == 04:14:01 (1431922441) 04:45:24:Lustre: DEBUG MARKER: /usr/sbin/lctl mark min OST has 1969152kB available, using 3844624kB file size 04:45:24:Lustre: DEBUG MARKER: min OST has 1969152kB available, using 3844624kB file size 04:45:24:LNet: Service thread pid 3517 completed after 77.68s. This indicates the system was overloaded (too many service threads, or there were not enough hardware resources). 04:45:24:LNet: Skipped 8 previous similar messages 04:45:24:LNet: Service thread pid 3556 completed after 84.32s. This indicates the system was overloaded (too many service threads, or there were not enough hardware resources). 04:45:24:LustreError: 7365:0:(qsd_handler.c:340:qsd_req_completion()) $$$ DQACQ failed with -22, flags:0x4 qsd:lustre-OST0004 qtype:grp id:500 enforced:1 granted:1048576 pending:0 waiting:0 req:1 usage:0 qunit:0 qtune:0 edquot:0 04:45:24:LustreError: 7365:0:(qsd_handler.c:340:qsd_req_completion()) Skipped 12 previous similar messages 04:45:24:LustreError: 7364:0:(qsd_handler.c:340:qsd_req_completion()) $$$ DQACQ failed with -22, flags:0x4 qsd:lustre-OST0004 qtype:grp id:500 enforced:1 granted:1048576 pending:0 waiting:0 req:1 usage:0 qunit:0 qtune:0 edquot:0 04:45:24:LustreError: 7364:0:(qsd_handler.c:340:qsd_req_completion()) Skipped 11 previous similar messages 04:45:24:LustreError: 7364:0:(qsd_handler.c:340:qsd_req_completion()) $$$ DQACQ failed with -22, flags:0x4 qsd:lustre-OST0004 qtype:grp id:500 enforced:1 granted:1048576 pending:0 waiting:0 req:1 usage:0 qunit:0 qtune:0 edquot:0 04:45:24:LustreError: 7364:0:(qsd_handler.c:340:qsd_req_completion()) Skipped 11 previous similar messages 04:45:24:LNet: Service thread pid 29001 completed after 45.78s. This indicates the system was overloaded (too many service threads, or there were not enough hardware resources). 04:45:24:LNet: Skipped 11 previous similar messages 05:14:26:********** Timeout by autotest system **********